server.port added 8090

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 camel.springboot.main-run-controller=true
 SANDSTORM_HOME=/home/shrimank/workspace/SANDSTORM/JAVA/SANDSTORM_HOME
+server.port=8090
+
 #
 # Speed up application launch
 # 1. Turn off the spring boot banner
@@ -32,9 +34,9 @@ platform.server=http://localhost:8086
 
 #lookupCode Properties
 #Property for Extension
-file.extension.property=valueTwo
+file.extension.property=valueOne
 #Property for Path
 file.path.property=valueThree
 #Property for filesize in MB
-file.size.property=valueFour
+file.size.property=valueTwo
 
