--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ platform.server=http://localhost:8086
 
 #lookupCode Properties
 #Property for Extension
-file.extension.property=valueOne
+file.extension.property=value
 #Property for Path
 file.path.property=valueThree
 #Property for filesize in MB
