--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,13 +30,16 @@ spring.data.mongodb.host=localhost
 
 
 #Sandstorm APIS
-platform.server=http://localhost:8086
+platform.server=http://192.168.1.115:8086
 
 #lookupCode Properties
 #Property for Extension
-file.extension.property=value
+file.extension.property=valueTwo
 #Property for Path
 file.path.property=valueThree
 #Property for filesize in MB
-file.size.property=valueTwo
+file.size.property=valueFour
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=100MB
 
