--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 camel.springboot.main-run-controller=true
-SANDSTORM_HOME=/home/shrimank/workspace/SANDSTORM/JAVA/SANDSTORM_HOME
+SANDSTORM_HOME=/home/kumaresanb/SANDSTORM
 server.port=8090
 
 #
@@ -26,11 +26,11 @@ logging.level.org.springframework.data.mongodb.core.index=OFF
 spring.data.mongodb.database=PlatformRelease_Test
 #spring.data.mongodb.database=testSpringData
 spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=10.10.69.204
 
 
 #Sandstorm APIS
-platform.server=http://192.168.1.115:8086
+platform.server=http://localhost:8086
 
 #lookupCode Properties
 #Property for Extension
