--- a/src/main/resources/validationMessages.properties
+++ b/src/main/resources/validationMessages.properties
@@ -18,5 +18,9 @@ fielderror.user.city.required=city is required in line {0}.
 #fielderror.user.masterTimeZone.required=masterTimeZone is required in line {0}.
 #fielderror.user.entityId.required=entityId is required in line {0}.
 fielderror.user.individualTransactionLimit.required=individualTransactionLimit is required in line {0}.
+fielderror.user.individualTransactionLimit.type=Type conversion error: Invalid Integer - {3} value in line  {0}
+
 fielderror.user.dailyLimit.required=dailyLimit is required in line {0}.
+
+fielderror.user.dailyLimit.type=Type conversion error: Invalid Integer value - {3}  in line  {0}
 fielderror.user.masterCurrency.required=masterCurrency is required in line {0}.
