--- a/src/main/resources/validationMessages.properties
+++ b/src/main/resources/validationMessages.properties
@@ -5,22 +5,58 @@ recorderror.unidentified=Record at line {0} is invalid.
 recorderror.unexpected=Record at line {0} is invalid.
 
 fielderror.user.userId.required=User Id is required in line {0}.
+fielderror.user.userId.maxLength==userId  exceeded the maximum length of {5} in line {0}.
+fielderror.user.userId.minLength==userId does not meet  minimum length of {4} in line {0}.
+fielderror.user.userId.regex=userId  in line {0} should be Alphanumeric.
+
 fielderror.user.userName.required=userName is required in line {0}.
-#fielderror.user.designation.required=Designation is required in line {0}.
+fielderror.user.userName.maxLength==userName  exceeded the maximum length of {5} in line {0}.
+fielderror.user.userName.minLength==userName does not meet  minimum length of {4} in line {0}.
+fielderror.user.userName.regex=userName  in line {0} should be Alphanumeric.
+
+fielderror.user.designation.maxLength=Designation  exceeded the maximum length of {5} in line {0}.
+
+
 fielderror.user.role.required=role is required in line {0}.
-#fielderror.user.phoneNumber.required=phoneNumber is required in line {0}.
-#fielderror.user.mobileNumber.required=mobileNumberis required in line {0}.
+
+
+fielderror.user.phoneNumber.maxLength==PhoneNumber  exceeded the maximum length of {5} in line {0}.
+fielderror.user.phoneNumber.minLength==PhoneNumber does not meet  minimum length of {4} in line {0}.
+fielderror.user.phoneNumber.regex=PhoneNumber  in line {0} should be numbers.
+
+
+fielderror.user.mobileNumber.maxLength==MobileNumber  exceeded the maximum length of {5} in line {0}.
+fielderror.user.mobileNumber.minLength==MobileNumber does not meet  minimum length of {4} in line {0}.
+fielderror.user.mobileNumber.regex=MobileNumber  in line {0} should be numbers.
+
 fielderror.user.emailId.required=emailId is required in line {0}.
-#fielderror.user.fax.required=fax number is required in line {0}.
+fielderror.user.emailId.maxLength==emailId exceeded the maximum length of {5} in line {0}.
+fielderror.user.emailId.regex=Email ID format in line {0} is invalid.
+
+fielderror.user.fax.maxLength=fax number exceeded the maximum length of {5} in line {0}.
+
 fielderror.user.country.required=country is required in line {0}.
+fielderror.user.country.maxLength==country exceeded the maximum length of {5} in line {0}.
+fielderror.user.country.regex= In line {0} country can contain only Alphabets and Spaces .
+
 fielderror.user.state.required=state is required in line {0}.
+fielderror.user.state.maxLength==state exceeded the maximum length of {5} in line {0}.
+fielderror.user.state.regex= In line {0} state can contain only Alphabets and Spaces
+
 fielderror.user.city.required=city is required in line {0}.
+fielderror.user.city.maxLength==city exceeded the maximum length of {5} in line {0}.
+fielderror.user.city.regex=In line {0} city can contain only Alphabets and Spaces
+
 #fielderror.user.masterTimeZone.required=masterTimeZone is required in line {0}.
 #fielderror.user.entityId.required=entityId is required in line {0}.
 fielderror.user.individualTransactionLimit.required=individualTransactionLimit is required in line {0}.
 fielderror.user.individualTransactionLimit.type=Type conversion error: Invalid Integer - {3} value in line  {0}
+fielderror.user.individualTransactionLimit.maxLength==IndividualTransactionLimit exceeded the maximum length of {5} in line {0}.
+fielderror.user.individualTransactionLimit.regex=  in line {0} IndividualTransactionLimit can contain only numbers and .
 
 fielderror.user.dailyLimit.required=dailyLimit is required in line {0}.
-
+fielderror.user.dailyLimit.maxLength==dailyLimit exceeded the maximum length of {5} in line {0}.
+fielderror.user.dailyLimit.regex= in line {0} dailyLimit can contain only numbers and .
 fielderror.user.dailyLimit.type=Type conversion error: Invalid Integer value - {3}  in line  {0}
+
 fielderror.user.masterCurrency.required=masterCurrency is required in line {0}.
