--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.data.mongodb.host=10.10.69.204
 
 
 #Sandstorm APIS
-platform.server=http://10.10.69.193:8086
+platform.server=http://localhost:8086
 
 #lookupCode Properties
 #Property for Extension
